fixed fullscreen editor whitespace issue

--- a/css/verovio.scss
+++ b/css/verovio.scss
@@ -83,7 +83,7 @@ p a {
 
 #editor {
 	position: absolute;
-	height: 550px;
+	height: 100%;
 	width: 570px;
     border-right: 2px solid #ccc;
 }
